// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Full render with active user 1`] = `
<div
  className="discussion"
>
  <div
    className="discussion-header"
  >
    <div
      className="count"
    >
       
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
       
      9 Comments
    </div>
    <span
      className="flex-spacer"
    />
    <div
      className="order"
    >
      <span
        className="order-label"
      >
        Sort Order
      </span>
      <select
        className="form-control form-control-sm"
        disabled={false}
        onChange={[Function]}
        value="trending"
      >
        <option
          value="trending"
        >
          Trending
        </option>
        <option
          value="author_reputation"
        >
          Reputation
        </option>
        <option
          value="votes"
        >
          Votes
        </option>
        <option
          value="created"
        >
          Age
        </option>
      </select>
    </div>
  </div>
  <div
    className="discussion-list"
  >
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@forykw/re-esteemapp-202067t12246786z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@forykw"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/forykw/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@forykw"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                forykw
              </span>
              <span
                className="author-reputation"
              >
                64
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@forykw/re-esteemapp-202067t12246786z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span>Prizes have consistently been very effective from <a class=\\"markdown-author-link\\" href=\\"/@esteemapp\\">@esteemapp</a> nicely done!</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@brittandjosie/re-esteemapp-qbi6t3"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@brittandjosie"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/brittandjosie/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@brittandjosie"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                brittandjosie
              </span>
              <span
                className="author-reputation"
              >
                71
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@brittandjosie/re-esteemapp-qbi6t3"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span><a class=\\"markdown-author-link\\" href=\\"/@ardpien\\">@ardpien</a> congrats on being one of the winners</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
      <div
        className="discussion-list"
      >
        <div
          className="discussion-item depth-2"
        >
          <div
            className="item-anchor"
            id="anchor-@ardpien/re-brittandjosie-qbjoep"
          />
          <div
            className="item-inner"
          >
            <div
              className="item-figure"
            >
              <a
                href="/@ardpien"
                onClick={[Function]}
              >
                <span
                  className="user-avatar medium"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.ecency.com/u/ardpien/avatar/medium)",
                    }
                  }
                />
              </a>
            </div>
            <div
              className="item-content"
            >
              <div
                className="item-header"
              >
                <a
                  className="author notranslate"
                  href="/@ardpien"
                  onClick={[Function]}
                >
                  <span
                    className="author-name"
                  >
                    ardpien
                  </span>
                  <span
                    className="author-reputation"
                  >
                    47
                  </span>
                </a>
                <span
                  className="separator"
                />
                <a
                  className="date"
                  href="/esteem/@ardpien/re-brittandjosie-qbjoep"
                  onClick={[Function]}
                  title="2020-01-01 23:12:00"
                >
                  3 days ago
                </a>
              </div>
              <div
                className="item-body markdown-view mini-markdown"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p><span>Thank you, Miss. <a class=\\"markdown-author-link\\" href=\\"/@birttandjosie\\">@birttandjosie</a>.</span></p>",
                  }
                }
              />
              <div
                className="item-controls"
              >
                <div>
                  <div>
                    <div
                      className="entry-vote-btn"
                      onClick={[Function]}
                    >
                      <div
                        className="btn-vote btn-up-vote"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="btn-inner "
                          >
                            <svg
                              className="vote-svg"
                              viewBox="6 8 12 7.41"
                            >
                              <path
                                d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="entry-payout notranslate"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  $ 0.00
                </div>
                <div
                  className="entry-votes notranslate"
                >
                  <span
                    className="inner-btn no-data"
                    title="No Votes"
                  >
                    <svg
                      fill="currentColor"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                        fillRule="evenodd"
                      />
                    </svg>
                     
                    0
                  </span>
                </div>
                <a
                  className="reply-btn"
                  onClick={[Function]}
                >
                  Reply
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@ardpien/qbi303"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@ardpien"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/ardpien/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@ardpien"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                ardpien
              </span>
              <span
                className="author-reputation"
              >
                47
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@ardpien/qbi303"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span>😃 I am mentioned here. That's great! All thanks to ESTEEM for creating an awesome Discord server for us to talk in there and participate in activities. Thank You ESTEEM team :) and <a class=\\"markdown-author-link\\" href=\\"/@good-karma\\">@good-karma</a>.</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.03
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="1 Vote"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                1
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@iliyan90/re-esteemapp-202066t124616772z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@iliyan90"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/iliyan90/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@iliyan90"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                iliyan90
              </span>
              <span
                className="author-reputation"
              >
                60
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@iliyan90/re-esteemapp-202066t124616772z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span><a class=\\"markdown-author-link\\" href=\\"/@esteemapp\\">@esteemapp</a></span><br />
Bug report <a href=\\"/esteem/@iliyan90/bug-report-to-esteemapp\\" class=\\"markdown-post-link\\">click here</a></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@trincowski/re-esteemapp-202066t84137915z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@trincowski"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/trincowski/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@trincowski"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                trincowski
              </span>
              <span
                className="author-reputation"
              >
                68
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@trincowski/re-esteemapp-202066t84137915z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Awesome. Thank you very much.</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.03
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="1 Vote"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                1
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@foxkoit/re-esteemapp-202066t8590757z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@foxkoit"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foxkoit/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@foxkoit"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                foxkoit
              </span>
              <span
                className="author-reputation"
              >
                71
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@foxkoit/re-esteemapp-202066t8590757z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Thank you 😀😇😇</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.03
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="1 Vote"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                1
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@irisworld/re-esteemapp-202066t14588243z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@irisworld"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/irisworld/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@irisworld"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                irisworld
              </span>
              <span
                className="author-reputation"
              >
                65
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@irisworld/re-esteemapp-202066t14588243z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>yahoo! thanks a lot!</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote primary-btn-done voted"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.08
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="2 Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                2
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@behiver/re-esteemapp-202066t85739415z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@behiver"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/behiver/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@behiver"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                behiver
              </span>
              <span
                className="author-reputation"
              >
                57
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@behiver/re-esteemapp-202066t85739415z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Great to see my name on the Giveaway and I like quite much engaging on Discord and find out what others are doing in the HIVE space. A source of news, common hobbies and other topics that rise up your day.</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.08
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="2 Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                2
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(2) Full render with no active user 1`] = `
<div
  className="discussion"
>
  <div
    className="discussion-card"
  >
    <div
      className="icon"
    >
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
    </div>
    <div
      className="label"
    >
      9 Comments
    </div>
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Show
    </button>
  </div>
</div>
`;

exports[`(3) With selected item 1`] = `
<div
  className="discussion"
>
  <div
    className="discussion-header"
  >
    <div
      className="count"
    >
       
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
       
      9 Comments
    </div>
    <span
      className="flex-spacer"
    />
    <div
      className="order"
    >
      <span
        className="order-label"
      >
        Sort Order
      </span>
      <select
        className="form-control form-control-sm"
        disabled={false}
        onChange={[Function]}
        value="trending"
      >
        <option
          value="trending"
        >
          Trending
        </option>
        <option
          value="author_reputation"
        >
          Reputation
        </option>
        <option
          value="votes"
        >
          Votes
        </option>
        <option
          value="created"
        >
          Age
        </option>
      </select>
    </div>
  </div>
  <div
    className="discussion-list"
  >
    <div
      className="discussion-item depth-1 selected-item"
    >
      <div
        className="item-anchor"
        id="anchor-@forykw/re-esteemapp-202067t12246786z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@forykw"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/forykw/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@forykw"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                forykw
              </span>
              <span
                className="author-reputation"
              >
                64
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@forykw/re-esteemapp-202067t12246786z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span>Prizes have consistently been very effective from <a class=\\"markdown-author-link\\" href=\\"/@esteemapp\\">@esteemapp</a> nicely done!</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@brittandjosie/re-esteemapp-qbi6t3"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@brittandjosie"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/brittandjosie/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@brittandjosie"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                brittandjosie
              </span>
              <span
                className="author-reputation"
              >
                71
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@brittandjosie/re-esteemapp-qbi6t3"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span><a class=\\"markdown-author-link\\" href=\\"/@ardpien\\">@ardpien</a> congrats on being one of the winners</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
      <div
        className="discussion-list"
      >
        <div
          className="discussion-item depth-2"
        >
          <div
            className="item-anchor"
            id="anchor-@ardpien/re-brittandjosie-qbjoep"
          />
          <div
            className="item-inner"
          >
            <div
              className="item-figure"
            >
              <a
                href="/@ardpien"
                onClick={[Function]}
              >
                <span
                  className="user-avatar medium"
                  style={
                    Object {
                      "backgroundImage": "url(https://images.ecency.com/u/ardpien/avatar/medium)",
                    }
                  }
                />
              </a>
            </div>
            <div
              className="item-content"
            >
              <div
                className="item-header"
              >
                <a
                  className="author notranslate"
                  href="/@ardpien"
                  onClick={[Function]}
                >
                  <span
                    className="author-name"
                  >
                    ardpien
                  </span>
                  <span
                    className="author-reputation"
                  >
                    47
                  </span>
                </a>
                <span
                  className="separator"
                />
                <a
                  className="date"
                  href="/esteem/@ardpien/re-brittandjosie-qbjoep"
                  onClick={[Function]}
                  title="2020-01-01 23:12:00"
                >
                  3 days ago
                </a>
              </div>
              <div
                className="item-body markdown-view mini-markdown"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p><span>Thank you, Miss. <a class=\\"markdown-author-link\\" href=\\"/@birttandjosie\\">@birttandjosie</a>.</span></p>",
                  }
                }
              />
              <div
                className="item-controls"
              >
                <div>
                  <div>
                    <div
                      className="entry-vote-btn"
                      onClick={[Function]}
                    >
                      <div
                        className="btn-vote btn-up-vote"
                      >
                        <div
                          className=""
                        >
                          <span
                            className="btn-inner "
                          >
                            <svg
                              className="vote-svg"
                              viewBox="6 8 12 7.41"
                            >
                              <path
                                d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                                fill="currentColor"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  className="entry-payout notranslate"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseOut={[Function]}
                  onMouseOver={[Function]}
                >
                  $ 0.00
                </div>
                <div
                  className="entry-votes notranslate"
                >
                  <span
                    className="inner-btn no-data"
                    title="No Votes"
                  >
                    <svg
                      fill="currentColor"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                        fillRule="evenodd"
                      />
                    </svg>
                     
                    0
                  </span>
                </div>
                <a
                  className="reply-btn"
                  onClick={[Function]}
                >
                  Reply
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@ardpien/qbi303"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@ardpien"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/ardpien/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@ardpien"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                ardpien
              </span>
              <span
                className="author-reputation"
              >
                47
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@ardpien/qbi303"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span>😃 I am mentioned here. That's great! All thanks to ESTEEM for creating an awesome Discord server for us to talk in there and participate in activities. Thank You ESTEEM team :) and <a class=\\"markdown-author-link\\" href=\\"/@good-karma\\">@good-karma</a>.</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.03
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="1 Vote"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                1
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@iliyan90/re-esteemapp-202066t124616772z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@iliyan90"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/iliyan90/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@iliyan90"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                iliyan90
              </span>
              <span
                className="author-reputation"
              >
                60
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@iliyan90/re-esteemapp-202066t124616772z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span><a class=\\"markdown-author-link\\" href=\\"/@esteemapp\\">@esteemapp</a></span><br />
Bug report <a href=\\"/esteem/@iliyan90/bug-report-to-esteemapp\\" class=\\"markdown-post-link\\">click here</a></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@trincowski/re-esteemapp-202066t84137915z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@trincowski"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/trincowski/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@trincowski"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                trincowski
              </span>
              <span
                className="author-reputation"
              >
                68
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@trincowski/re-esteemapp-202066t84137915z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Awesome. Thank you very much.</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.03
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="1 Vote"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                1
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@foxkoit/re-esteemapp-202066t8590757z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@foxkoit"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/foxkoit/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@foxkoit"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                foxkoit
              </span>
              <span
                className="author-reputation"
              >
                71
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@foxkoit/re-esteemapp-202066t8590757z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Thank you 😀😇😇</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.03
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="1 Vote"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                1
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@irisworld/re-esteemapp-202066t14588243z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@irisworld"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/irisworld/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@irisworld"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                irisworld
              </span>
              <span
                className="author-reputation"
              >
                65
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@irisworld/re-esteemapp-202066t14588243z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>yahoo! thanks a lot!</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote primary-btn-done voted"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.08
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="2 Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                2
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@behiver/re-esteemapp-202066t85739415z"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@behiver"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/behiver/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@behiver"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                behiver
              </span>
              <span
                className="author-reputation"
              >
                57
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@behiver/re-esteemapp-202066t85739415z"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Great to see my name on the Giveaway and I like quite much engaging on Discord and find out what others are doing in the HIVE space. A source of news, common hobbies and other topics that rise up your day.</p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.08
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn"
                onClick={[Function]}
                title="2 Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                2
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`(4) Show mute button, muted comment 1`] = `
<div
  className="discussion"
>
  <div
    className="discussion-header"
  >
    <div
      className="count"
    >
       
      <svg
        viewBox="0 0 24 24"
      >
        <path
          d="M18,8H6V6H18V8M18,11H6V9H18V11M18,14H6V12H18V14M22,4A2,2 0 0,0 20,2H4A2,2 0 0,0 2,4V16A2,2 0 0,0 4,18H18L22,22V4Z"
          fill="currentColor"
        />
      </svg>
       
      9 Comments
    </div>
    <span
      className="flex-spacer"
    />
    <div
      className="order"
    >
      <span
        className="order-label"
      >
        Sort Order
      </span>
      <select
        className="form-control form-control-sm"
        disabled={false}
        onChange={[Function]}
        value="trending"
      >
        <option
          value="trending"
        >
          Trending
        </option>
        <option
          value="author_reputation"
        >
          Reputation
        </option>
        <option
          value="votes"
        >
          Votes
        </option>
        <option
          value="created"
        >
          Age
        </option>
      </select>
    </div>
  </div>
  <div
    className="discussion-list"
  >
    <div
      className="discussion-item depth-1"
    >
      <div
        className="item-anchor"
        id="anchor-@brittandjosie/re-esteemapp-qbi6t3"
      />
      <div
        className="item-inner"
      >
        <div
          className="item-figure"
        >
          <a
            href="/@brittandjosie"
            onClick={[Function]}
          >
            <span
              className="user-avatar medium"
              style={
                Object {
                  "backgroundImage": "url(https://images.ecency.com/u/brittandjosie/avatar/medium)",
                }
              }
            />
          </a>
        </div>
        <div
          className="item-content"
        >
          <div
            className="item-header"
          >
            <a
              className="author notranslate"
              href="/@brittandjosie"
              onClick={[Function]}
            >
              <span
                className="author-name"
              >
                brittandjosie
              </span>
              <span
                className="author-reputation"
              >
                71
              </span>
            </a>
            <span
              className="separator"
            />
            <a
              className="date"
              href="/esteem/@brittandjosie/re-esteemapp-qbi6t3"
              onClick={[Function]}
              title="2020-01-01 23:12:00"
            >
              3 days ago
            </a>
          </div>
          <div
            className="item-body markdown-view mini-markdown"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p><span><a class=\\"markdown-author-link\\" href=\\"/@ardpien\\">@ardpien</a> congrats on being one of the winners</span></p>",
              }
            }
          />
          <div
            className="item-controls"
          >
            <div>
              <div>
                <div
                  className="entry-vote-btn"
                  onClick={[Function]}
                >
                  <div
                    className="btn-vote btn-up-vote"
                  >
                    <div
                      className=""
                    >
                      <span
                        className="btn-inner "
                      >
                        <svg
                          className="vote-svg"
                          viewBox="6 8 12 7.41"
                        >
                          <path
                            d="M7.41,15.41L12,10.83L16.59,15.41L18,14L12,8L6,14L7.41,15.41Z"
                            fill="currentColor"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="entry-payout notranslate"
              onBlur={[Function]}
              onFocus={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
            >
              $ 0.00
            </div>
            <div
              className="entry-votes notranslate"
            >
              <span
                className="inner-btn no-data"
                title="No Votes"
              >
                <svg
                  fill="currentColor"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"
                    fillRule="evenodd"
                  />
                </svg>
                 
                0
              </span>
            </div>
            <a
              className="reply-btn"
              onClick={[Function]}
            >
              Reply
            </a>
            <a
              className="mute-btn"
              href="#"
              onClick={[Function]}
            >
              Mute
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="hidden-warning d-flex justify-content-between flex-1 align-items-center mt-3"
    >
      <div
        className="flex-1"
      >
        Show additional replies, including those that may contain offensive content
      </div>
      <div
        className="pointer p-3"
        onClick={[Function]}
      >
        <b>
          Show
        </b>
      </div>
    </div>
  </div>
</div>
`;
